infra/k8s/client.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: fgoto/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-svc
spec:
  # default =  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      # port exposed by the service in the cluster
      port: 3000
      # port inside the container
      targetPort: 3000
