infra/k8s/posts.nodeport.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-svc
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      # port exposed by the service in the cluster
      port: 4000
      # port inside the container
      targetPort: 4000
